--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -113,10 +113,11 @@ ul
    background-image: linear-gradient(#f5f5f5, #f2f3f4); 
     color: #1C3664 ;
     text-align: center;
-    font-size: 1.8em;
+    font-size: 1.2em;
     border-color:#1C3664;
  border-style: solid;
   border-radius: 15px 15px / 15px 15px;
+  margin-bottom: 5%;
 }
 .top {
  /*background-image: linear-gradient( #f5f5f5 , #f2f3f4 );*/
