--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,52 +3,69 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="row">
-  <div class="span6 offset3">
+<table> 
+      <tr>
+            <td> First Name: </td>
+            <td><%= @user.first_name %></td>
+      </tr>
+      <tr>
+            <td> Last Name: </td>
+            <td><%= @user.last_name %></td>
+      </tr>
+      <tr>
+            <td> Email: </td>
+            <td><%= @user.email %></td>
+      </tr>
+      <tr>
+            <td> Phone </td>
+            <td><%= @user.phone %></td>
+      </tr>
+      <tr>
+            <td> Company: </td>
+            <td><%= @user.company %></td>
+      </tr>
+      <tr>
+            <td> Address: </td>
+            <td><%= @user.address %></td>
+      </tr>
+      <tr>
+            <td> City: </td>
+            <td><%= @user.city %></td>
+      </tr>
+      <tr>
+            <td> State: </td>
+            <td><%= @user.state %></td>
+      </tr>
+      <tr>
+            <td> Zip: </td>
+            <td><%= @user.zip %></td>
+      </tr>
+</table>
 
-      <table> 
+<%= link_to "Edit Profile Info", edit_user_path(@user) %>	
+
+<h1>Sites: </h1>
+<% if @user.sites.any? %>
+      <table>
             <tr>
-                  <td> First Name: </td>
-                  <td><%= @user.first_name %></td>
+                  <td>Site Name:</td>
+                  <td>Company:</td>
+                  <td>City:</td>
+                  <td>State:</td>
             </tr>
-            <tr>
-                  <td> Last Name: </td>
-                  <td><%= @user.last_name %></td>
-            </tr>
-            <tr>
-                  <td> Email: </td>
-                  <td><%= @user.email %></td>
-            </tr>
-            <tr>
-                  <td> Phone </td>
-                  <td><%= @user.phone %></td>
-            </tr>
-            <tr>
-                  <td> Company: </td>
-                  <td><%= @user.company %></td>
-            </tr>
-            <tr>
-                  <td> Addres: </td>
-                  <td><%= @user.address %></td>
-            </tr>
-            <tr>
-                  <td> City: </td>
-                  <td><%= @user.city %></td>
-            </tr>
-            <tr>
-                  <td> State: </td>
-                  <td><%= @user.state %></td>
-            </tr>
-            <tr>
-                  <td> Zip: </td>
-                  <td><%= @user.zip %></td>
-            </tr>
+            <ol class="sites">
+                  <%= render @sites %>
+            </ol>
+            <%#= will_paginate @sites %>
       </table>
+<% else %>
+<p> No sites saved </p>
+<% end %>
 
-	<%= link_to "Edit", edit_user_path(@user) %>	
-	<br> <!-- enters a blank line, ie: line break -->
-	<br> <!-- enters a blank line, ie: line break -->
-	<br> <!-- enters a blank line, ie: line break -->
-	<br> <!-- enters a blank line, ie: line break -->
-   </div>
-</div>
+<%= link_to "Create New Site", new_site_path %>
+
+<br> <!-- enters a blank line, ie: line break -->
+<br> <!-- enters a blank line, ie: line break -->
+<br> <!-- enters a blank line, ie: line break -->
+<br> <!-- enters a blank line, ie: line break -->
+
