--- a/app/views/site_load_profiles/show.html.erb
+++ b/app/views/site_load_profiles/show.html.erb
@@ -63,8 +63,12 @@
 
 <%= link_to "Edit Site Info", edit_site_path(@site) %>      
 
+
 <h1>Site Load Profile: </h1>
+
+
 <% if @site.site_load_profiles.any? %>
+      <% @full_load_profile = SiteLoadProfile.get_load_profile(@site.id) %>
       <table>
             <tr>
                   <td>Meter Read Date:</td>
@@ -77,10 +81,26 @@
                   <td>Part-Peak Demand (kW):</td>
                   <td>Off-Peak Demand (kW):</td>
             </tr>
-            <ol class="sites">
-                  <%= render @site_load_profiles %>
-            </ol>
-            <%#= will_paginate @sites %>
+            
+            <% @full_load_profile.each do |i| %>
+                  <tr>
+                        <td><%= i[:meter_read_date] %></td>
+
+                        <td><%= i[:all_usage] %></td>
+                        <td><%= i[:peak_usage] %></td>
+                        <td><%= i[:part_usage] %></td>
+                        <td><%= i[:off_usage] %></td>
+
+                        <td><%= i[:all_demand] %></td>
+                        <td><%= i[:peak_demand] %></td>
+                        <td><%= i[:part_demand] %></td>
+                        <td><%= i[:off_demand] %></td>
+                        
+                        <td><%#= link_to "Edit",       edit_user_path(@user) %></td>
+                        <td><%#= link_to "Select",     edit_user_path(@user) %></td>
+                        <td><%#= link_to "Delete",     edit_user_path(@user) %></td>
+                  </tr>
+            <% end %>
       </table>
 <% else %>
 <p> No load profile saved </p>
@@ -90,7 +110,7 @@
 <h1>Add to Site Load Profile:</h1>
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@site_load_profile) do |f| %>
+    <%= form_for(@site_load_profile, url: { action: "create" }) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
             
             <div>
@@ -104,7 +124,7 @@
 
             <div class="right">
                   <%= f.label :tou, "Time of Use" %>
-                  <%= f.select :tou, ['All', 'Peak', 'Part-Peak', 'Off-Peak'] %>
+                  <%= f.select :tou, ['All', 'On-Peak', 'Part-Peak', 'Off-Peak'] %>
             </div>
 
             <div class="left">
